--- a/paymentBilling/ElaAdmin/templates/ElaAdmin/includes/Customer/add_details.html
+++ b/paymentBilling/ElaAdmin/templates/ElaAdmin/includes/Customer/add_details.html
@@ -42,7 +42,7 @@
 
                                         <div class="form-group row">
                                             <div class="col-lg-8 ml-auto">
-                                                <button type="submit" class="btn btn-success m-b-10 m-l-5" id="toastr-success-top-right" value="Submit">Submit</button>
+                                                <button type="submit" class="btn btn-primary" value="Submit">Submit</button>
                                                 <!--<input type="submit" value="Submit"/>-->
                                             </div>
                                         </div>
