--- a/paymentBilling/ElaAdmin/templates/ElaAdmin/add_profile.html
+++ b/paymentBilling/ElaAdmin/templates/ElaAdmin/add_profile.html
@@ -1,14 +1,15 @@
 {% extends 'ElaAdmin/common/base.html' %}
 
 {% block content %}
+
         <div class="unix-login">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-lg-4">
                         <div class="login-content card">
                             <div class="login-form">
-                                <h4>Login</h4>
-                                <form action="../login.html" method="post" >
+                                <h4>Register</h4>
+                                <form action="../add_profile.html" method="post">
                                     {% csrf_token %}
 
                                     {% for field in form %}
@@ -18,22 +19,10 @@
                                         </div>
                                     {% endfor %}
 
-
-                                    <!--<div class="checkbox">-->
-                                        <!--<label>-->
-        										<!--<input type="checkbox"> Remember Me-->
-        									<!--</label>-->
-                                        <!--<label class="pull-right">-->
-        										<!--<a href="#">Forgotten Password?</a>-->
-        									<!--</label>-->
-
-                                    <!--</div>-->
-                                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Sign in</button>
-
+                                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
                                     <div class="register-link m-t-15 text-center">
-                                        <p>Don't have account ? <a href="../add_profile.html"> Sign Up Here</a></p>
+                                        <p>Already have account ? <a href="../login.html"> Sign in</a></p>
                                     </div>
-
                                 </form>
                             </div>
                         </div>
@@ -41,4 +30,6 @@
                 </div>
             </div>
         </div>
+
 {% endblock %}
+
