--- a/paymentBilling/ElaAdmin/templates/ElaAdmin/add_profile.html
+++ b/paymentBilling/ElaAdmin/templates/ElaAdmin/add_profile.html
@@ -12,17 +12,38 @@
                                 <form action="../add_profile.html" method="post">
                                     {% csrf_token %}
 
-                                    {% for field in form %}
-                                        <div class="form-group">
-                                            <label>{{ field.label }}</label>
-                                            {{ field }}
-                                        </div>
-                                    {% endfor %}
+                                    {% ifequal user.groups.all.0.name "superuser" %}
+                                        {% for field in form %}
+                                            <div class="form-group">
+                                                <label>{{ field.label }}</label>
+                                                {{ field }}
+                                            </div>
+                                        {% endfor %}
+
+                                    {% else %}
+
+                                        {% for field in form %}
+                                            {% if field.label != "CLIENT" %}
+                                            <div class="form-group">
+                                                <label>{{ field.label }}</label>
+                                                {{ field }}
+                                            </div>
+                                            {% else %}
+                                            <div class="form-group" style="display:none;" >
+                                                <label>{{ field.label }}</label>
+                                                {{ field }}
+                                            </div>
+                                            {% endif %}
+                                        {% endfor %}
+
+                                    {% endifequal %}
+
+
 
                                     <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
-                                    <div class="register-link m-t-15 text-center">
-                                        <p>Already have account ? <a href="../login.html"> Sign in</a></p>
-                                    </div>
+                                    <!--<div class="register-link m-t-15 text-center">-->
+                                        <!--<p>Already have account ? <a href="../login.html"> Sign in</a></p>-->
+                                    <!--</div>-->
                                 </form>
                             </div>
                         </div>
