--- a/paymentBilling/ElaAdmin/templates/ElaAdmin/common/navbar_right.html
+++ b/paymentBilling/ElaAdmin/templates/ElaAdmin/common/navbar_right.html
@@ -10,7 +10,8 @@
 
     <!-- Profile -->
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="/static/images/users/5.jpg" alt="user" class="profile-pic" /></a>
+
+        <a class="nav-link dropdown-toggle text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome, {{ user.username }} <img src="/static/images/users/5.jpg" alt="user" class="profile-pic" /></a>
         <div class="dropdown-menu dropdown-menu-right animated zoomIn">
             <ul class="dropdown-user">
                 <li><a href="#"><i class="ti-user"></i> Profile</a></li>
