--- a/paymentBilling/ElaAdmin/templates/ElaAdmin/login.html
+++ b/paymentBilling/ElaAdmin/templates/ElaAdmin/login.html
@@ -30,9 +30,9 @@
                                     <!--</div>-->
                                     <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Sign in</button>
 
-                                    <div class="register-link m-t-15 text-center">
-                                        <p>Don't have account ? <a href="../add_profile.html"> Sign Up Here</a></p>
-                                    </div>
+                                    <!--<div class="register-link m-t-15 text-center">-->
+                                        <!--<p>Don't have account ? <a href="../add_profile.html"> Sign Up Here</a></p>-->
+                                    <!--</div>-->
 
                                 </form>
                             </div>
