--- a/paymentBilling/ElaAdmin/templates/ElaAdmin/page-error-403.html
+++ b/paymentBilling/ElaAdmin/templates/ElaAdmin/page-error-403.html
@@ -1,19 +1,16 @@
 {% extends 'ElaAdmin/common/base.html' %}
 
 {% block content %}
-
-
     <!-- Main wrapper  -->
     <div class="error-page" id="wrapper">
         <div class="error-box">
             <div class="error-body text-center">
-                <h1>400</h1>
-                <h3 class="text-uppercase">Page not found </h3>
+                <h1>403</h1>
+                <h3 class="text-uppercase">Forbiddon Error! </h3>
                 <p class="text-muted m-t-30 m-b-30">Please try after some time</p>
-                <a class="btn btn-info btn-rounded waves-effect waves-light m-b-40" href="../index.html">Back to home</a> </div>
-            <footer class="footer text-center">&copy; 2018 Zebramin.</footer>
+                <a class="btn btn-info btn-rounded waves-effect waves-light m-b-40" href="../login.html">Back to home</a>
+            </div>
         </div>
     </div>
     <!-- End Wrapper -->
-
 {% endblock %}
